# pic32prog-autotools

./: .gitignore  COPYING  Makefile.in  README.md  build-dep  bundle.sh  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  configure.c  pic32prog.c  serial.c  target.c
src/adapters/: adapter-an1388-uart.c  adapter-an1388.c  adapter-bitbang.c  adapter-hidboot.c  adapter-mpsse.c  adapter-pickit2.c  adapter-stk500v2.c  adapter-uhb.c
src/families/: family-mx1.c  family-mx3.c  family-mz.c  family-xlp.c
src/hid/bsd/: hid.c
src/hid/windows/: hid.c
src/include/: adapter.h  console.h  localize.h  pic32.h  pickit2.h  serial.h  target.h
